new updates made

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                             <li>JavaScript</li>
                             <li>ReactJS</li>
                             <li>Git & GitHub</li>
+                            <li>WordPress</li>
                             <li>Python(Basics)</li>
                         </ul>
                     </div>
@@ -124,14 +125,70 @@
 <!-------------------Portfolio--------------------->
 <div id="portfolio">
     <div class="container">
-        <h1 class="sub-title">My Work</h1>
+        <h1 class="sub-title">My Work</h1> 
         <div class="work-list">
             <div class="work">
-                <img src=""
+                <img src="uniwebsite.jpg">
+            <div class="layer">
+                <h3>Austin University Website</h3>
+                <p>some description goes here hdjhdjk jdidd gdskilern hoeres
+                    svddud ndjuik derscipbe evrey that ypu need to rhfk kwoe.</p>
+                    <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+            </div>
+            <div class="work">
+                <img src="eshop.jpg">
+                <div class="layer">
+                    <h3>Online Shopping App</h3>
+                    <p>some description goes here hdjhdjk jdidd gdskilern hoeres
+                        svddud ndjuik derscipbe evrey that ypu need to rhfk kwoe.</p>
+                        <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="secretapp.png">
+                <div class="layer">
+                    <h3>Other App</h3>
+                    <p>some description goes here hdjhdjk jdidd gdskilern hoeres
+                        svddud ndjuik derscipbe evrey that ypu need to rhfk kwoe.</p>
+                        <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+        </div>
+        <a href="#" class="btn">See more</a>
+    </div>
+</div>
+
+<!-------------------------contact------------------------------------------>
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-solid fa-paper-plane"></i> contact@example.com</p>
+                <p><i class="fa-solid fa-square-phone"></i> +421906567654</p>
+                <div class="social-icons">
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+                <a href="mycv.jpg" download class="btn btn2">View CV</a>
+            </div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="Email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
             </div>
         </div>
     </div>
+    <div class="copyright">
+        <p>Copyright &copy; 2023. Developed By Austin.</p>
+    </div>
 </div>
+
 
     <script>
         var myElement = document.getElementById("auto-input");
