new updates to commit

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
         <div class="services-list">
            <div>
             <i class="fa-solid fa-code"></i>
-            <h2>Web Development</h2>
+            <h2>Web Design</h2>
             <p>Clean and modern web design that captivates users with its sleek aesthetic and
                  intuitive navigation. Engaging user experience through seamless interactions
                   and visually appealing design elements. Responsive and mobile-friendly 
                   layout ensuring optimal viewing experience across all devices.
             </p>
-            <a href="#">Learn More</a>
+            <a href="https://webdesigner.withgoogle.com/">Learn More</a>
            </div>
           
            <div>
@@ -116,7 +116,7 @@
                   effortless interaction. Responsive and adaptable design, ensuring optimal performance
                    across various devices for on-the-go accessibility.
             </p>
-            <a href="#">Learn More</a>
+            <a href="https://www.techtarget.com/searchsoftwarequality/definition/Web-application-Web-app">Learn More</a>
            </div>
           
         </div>
@@ -132,26 +132,25 @@
                 <img src="uniwebsite.jpg">
             <div class="layer">
                 <h3>Austin University Website</h3>
-                <p>some description goes here hdjhdjk jdidd gdskilern hoeres
-                    svddud ndjuik derscipbe evrey that ypu need to rhfk kwoe.</p>
-                    <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                <p>The university website I created is a user-friendly platform that serves as a hub 
+                    for information, resources, and opportunities. It offers seamless navigation and
+                     intuitive design. Explore the site </p>
+                    <a href="https://emekaobidike.github.io/austine-university-project/"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
             </div>
             <div class="work">
                 <img src="eshop.jpg">
                 <div class="layer">
                     <h3>Online Shopping App</h3>
-                    <p>some description goes here hdjhdjk jdidd gdskilern hoeres
-                        svddud ndjuik derscipbe evrey that ypu need to rhfk kwoe.</p>
+                    <p>coming soon</p>
                         <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="secretapp.png">
                 <div class="layer">
-                    <h3>Other App</h3>
-                    <p>some description goes here hdjhdjk jdidd gdskilern hoeres
-                        svddud ndjuik derscipbe evrey that ypu need to rhfk kwoe.</p>
+                    <h3>Other Project</h3>
+                    <p>coming soon.</p>
                         <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
