--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="row">
          <div class="austin-col">
              <h1 id="auto-input"></h1>
-             <p>A passionate Front-end Developer based in Handlova, Slovakia. I love to explore and create!
-                I'm a lifelong learner and i might have a thing for <span class="nut">Nutella!</span>
+             <p>A passionate Front-end Developer based in Handlova, Slovakia. I'm a lifelong learner 
+                and i might have a thing for <span class="nut">Nutella!</span>
                 <i class="fa-regular fa-face-smile"></i>
              </p>
              <div class="social-icons">
