--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="https://www.facebook.com/emeka.a.obidike"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://instagram.com/_austin_obidike_?igshid=ZDc4ODBmNjlmNQ=="><i class="fa-brands fa-instagram"></i></a>
              </div>
-            <a href="mycv.jpg" download class="btn btn2">View CV</a>
+            <a href="AustinCV.jpg" download class="btn btn2">View CV</a>
          </div>
          <div class="austin-col">
             <img src="IMG_20230605_135218.jpg">
@@ -74,18 +74,18 @@
                            coding. With my dedication and commitment, I aim to craft innovative solutions and contribute
                             to the field of software development. One line of code at a time <i class="fa-regular fa-face-smile"></i>
                           </div>
-                          <button onclick="toggleContent()" id="toggleButton">Show More About Me</button>
+                          <button onclick="toggleContent()" id="toggleButton">Read More</button>
 
                           
                     </p><br>
                    
                     <p class="click">CLICK ON TAB LINKS TO SEE INFORMATION</p>
                     <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                        <p class="tab-links active-link" onclick="opentab('skills')">Technical Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
                     </div>
-                    <div class="tab-contents active-tab" id="Technical skills">
+                    <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
@@ -251,7 +251,7 @@ function toggleContent() {
     toggleButton.textContent = "Show Less";
   } else {
     additionalContent.style.display = "none";
-    toggleButton.textContent = "Show More About Me";
+    toggleButton.textContent = "Read More";
   }
 }
 
