--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
          <div class="austin-col">
              <h1 id="auto-input">&#x1F44B;
              </h1>
-             <p>A passionate Front-end Developer based in Handlova, Slovakia&#128205;
-             I'm a lifelong learner and  
-                I used to teach <span class="job">IT</span> and <span class="job">English</span> in 
-                Primary & Secondary Schools.
-             </p>
+             <p>A passionate Front-end Developer based in Handlova, Slovakia&#128205;</p>
              <div class="social-icons">
                 <a href="https://github.com/EmekaObidike"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/emeka-obidike-99167b20a"><i class="fa-brands fa-linkedin"></i></a>
@@ -60,7 +56,7 @@
                
                 <div class="about-col2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>I proudly earned my IT degree from the esteemed University of Ghana. However, 
+                    <p>I earned my IT degree from the esteemed University of Ghana. However, 
                         life had a different plan for me. Instead of diving straight into a career as a developer,
                          I embarked on a transformative journey.
                          <div id="additionalContent" style="display: none;">
@@ -74,7 +70,7 @@
                            coding. With my dedication and commitment, I aim to craft innovative solutions and contribute
                             to the field of software development. One line of code at a time <i class="fa-regular fa-face-smile"></i>
                           </div>
-                          <button onclick="toggleContent()" id="toggleButton">Read More</button>
+                          <button onclick="toggleContent()" id="toggleButton">Continue Reading</button>
 
                           
                     </p><br>
@@ -251,7 +247,7 @@ function toggleContent() {
     toggleButton.textContent = "Show Less";
   } else {
     additionalContent.style.display = "none";
-    toggleButton.textContent = "Read More";
+    toggleButton.textContent = "Continue Reading";
   }
 }
 
