added austine shopping app

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
             <div class="work">
                 <img src="eshop.jpg">
                 <div class="layer">
-                    <h3>Online Shopping App</h3>
-                    <p>coming soon</p>
-                        <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Austine Shopping App</h3>
+                    <p>75% Loading...click to see progress.</p>
+                        <a href="https://emekaobidike.github.io/austine_online_shopping_app/"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
